--- a/AnimeHubClient/Shared/AnimeCardSkeleton.razor
+++ b/AnimeHubClient/Shared/AnimeCardSkeleton.razor
@@ -1,13 +1,13 @@
-﻿<MudCard Elevation="0" Class="anime-card">
-    <MudCardMedia Class="skeleton skeleton-image"></MudCardMedia>
+﻿<div class="card anime-card border-0">
+    <div class="skeleton skeleton-image"></div>
     @* <div class="skeleton skeleton-text-line mt-3 mx-auto"></div> *@
 
-    <MudCardContent Class="card-body">
-        <MudText Typo="Typo.body2" Class="skeleton skeleton-text-line mx-auto"></MudText>
+    <div class="card-body">
+        <h5 class="skeleton skeleton-text-line mx-auto"></h5>
         @* <p class="skeleton skeleton-text-line-short"></p>
         <div class="skeleton skeleton-button"></div> *@
-    </MudCardContent>
-</MudCard>
+    </div>
+</div>
 
 @code {
 
