--- a/AnimeHubClient/Shared/AnimeQuickView.razor
+++ b/AnimeHubClient/Shared/AnimeQuickView.razor
@@ -9,7 +9,7 @@
 }
 else if (Anime != null)
 {
-    <MudPaper Class="pa-4 quick-view-content">
+    <MudPaper Elevation="8" Class="pa-4 quick-view-paper">
         <div class="d-flex justify-content-between align-items-center mb-3">
             <MudText Typo="Typo.body1" Class="fw-bold">@Anime.Season @Anime.PremieredYear</MudText>
             <div class="d-flex align-items-center">
