--- a/AnimeHubClient/Pages/Watchlist/MyWatchlist.razor
+++ b/AnimeHubClient/Pages/Watchlist/MyWatchlist.razor
@@ -202,7 +202,7 @@
         }
         catch (Exception ex)
         {
-            Console.WriteLine("Error loading watchlist.");
+            Console.WriteLine($"Error loading watchlist, {ex.Message}");
             // Snackbar.Add($"Error loading watchlist: {ex.Message}", Severity.Error);
             return new TableData<UserAnimeReadDto>() { TotalItems = 0, Items = new List<UserAnimeReadDto>() };
         }
