Proposal list page created

--- a/AnimeHubClient/Pages/Proposal/ProposalAnime.razor
+++ b/AnimeHubClient/Pages/Proposal/ProposalAnime.razor
@@ -1,4 +1,4 @@
-﻿@page "/propose-anime"
+﻿@page "/proposal-anime"
 @using AnimeHub.Shared.Models.Dtos.AnimeProposal
 @using AnimeHub.Shared.Models.Dtos.Studio
 @using AnimeHub.Shared.Models.Enums
