--- a/AnimeHubClient/Shared/ConfirmationDialog.razor
+++ b/AnimeHubClient/Shared/ConfirmationDialog.razor
@@ -1,6 +1,4 @@
-﻿@inject IDialogService Dialog
-
-<MudDialog>
+﻿<MudDialog>
     <DialogContent>
         <MudText>@ContentText</MudText>
     </DialogContent>
